{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 20,
  "lineage": "657d765d-d0ec-826d-24ab-b57dfca49e22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ASGnginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02a2af70a66af6dfb",
            "arn": "arn:aws:ec2:ap-south-1:473644656534:instance/i-063f4976c289ed1f1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063f4976c289ed1f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ASGkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec85f5a88c9152f5",
            "private_dns": "ip-99-0-0-32.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "99.0.0.32",
            "public_ip": "3.110.87.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08d8494370d3cc1dd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a997bbc2c20efdcf",
            "tags": {
              "Name": "ASGnginx_ins"
            },
            "tags_all": {
              "Name": "ASGnginx_ins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0853c6c1ed3cc4c7d"
            ]
          },
          "dependencies": [
            "aws_key_pair.ASGkey",
            "aws_subnet.asgpublicsubnet",
            "aws_vpc.asgvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "asgigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:473644656534:internet-gateway/igw-0126589e3b6ee303d",
            "id": "igw-0126589e3b6ee303d",
            "owner_id": "473644656534",
            "tags": {
              "Name": "asgigw"
            },
            "tags_all": {
              "Name": "asgigw"
            },
            "vpc_id": "vpc-0dac57dab0b54215b"
          },
          "dependencies": [
            "aws_vpc.asgvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "asgrta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:473644656534:route-table/rtb-0ba65efd5e0627e09",
            "id": "rtb-0ba65efd5e0627e09",
            "owner_id": "473644656534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0126589e3b6ee303d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dac57dab0b54215b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.asgigw",
            "aws_vpc.asgvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asgsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:473644656534:security-group/sg-0853c6c1ed3cc4c7d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0853c6c1ed3cc4c7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "asgsg",
            "name_prefix": "",
            "owner_id": "473644656534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asgsg"
            },
            "tags_all": {
              "Name": "asgsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dac57dab0b54215b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.asgvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "asgpublicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:473644656534:subnet/subnet-0a997bbc2c20efdcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "99.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a997bbc2c20efdcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473644656534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "asgpublic_subnet"
            },
            "tags_all": {
              "Name": "asgpublic_subnet"
            },
            "vpc_id": "vpc-0dac57dab0b54215b"
          },
          "dependencies": [
            "aws_vpc.asgvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "asgvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:473644656534:vpc/vpc-0dac57dab0b54215b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "99.0.0.0/16",
            "default_network_acl_id": "acl-0c2f18326fe9018a5",
            "default_route_table_id": "rtb-0f59580e4f9eac549",
            "default_security_group_id": "sg-0ff7b54a7605ae989",
            "dhcp_options_id": "dopt-0623ff18e967c2c11",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dac57dab0b54215b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f59580e4f9eac549",
            "owner_id": "473644656534",
            "tags": {
              "Name": "asgvpc"
            },
            "tags_all": {
              "Name": "asgvpc"
            }
          }
        }
      ]
    }
  ]
}